--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>DOM Menu Lab 2</title>
 </head>
 <body>
   <header>
     <nav id="top-menu"></nav>
+    <nav id="top-menu"></nav>
+    <!-- Add the <nav> element below -->
+    <nav id="sub-menu"></nav>
   </header>
   <main></main>
 
